--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply text-white;
+}
+
+.container {
+    @apply max-w-[88rem] px-8 mx-auto;
+}
