--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ body {
 }
 
 .bn-editor{
-    @apply mt-3 block w-full rounded-lg border-none bg-white/5 py-1.5 px-14 text-sm/6 text-white  
+    @apply mt-3 block w-full rounded-lg border-none bg-white/5 py-1.5 px-14 text-sm/6 text-white pt-6 
       
 }
